--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@ layout: default
             </div>
         </div>
         <div class="mt-5 md:col-span-2 md:mt-0">
-            <form>
+            <form data-controller="contact"
+                data-contact-url-value="https://aa08zllk9g.execute-api.eu-west-2.amazonaws.com/v1/contact">
                 <div class="shadow sm:overflow-hidden sm:rounded-md">
                     <div class="space-y-6 bg-white px-4 py-5 sm:p-6">
                         <div class="grid grid-cols-3 gap-6">
                             <div class="col-span-3 sm:col-span-2">
                                 <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                                <input type="text" name="name" id="name" autocomplete="name" required
+                                <input type="text" name="name" id="name" autocomplete="name" data-contact-target="name"
+                                    required
                                     class="block mt-1 shadow-sm w-full flex-1 rounded-md rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
                             </div>
                         </div>
@@ -25,7 +27,8 @@ layout: default
                         <div class="grid grid-cols-3 gap-6">
                             <div class="col-span-3 sm:col-span-2">
                                 <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                                <input type="email" name="email" id="email" autocomplete="email" required
+                                <input type="email" name="email" id="email" autocomplete="email"
+                                    data-contact-target="email" required
                                     class="block mt-1 shadow-sm w-full flex-1 rounded-md rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
                                     , placeholder="you@example.com">
                             </div>
@@ -34,7 +37,7 @@ layout: default
                         <div>
                             <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
                             <div class="mt-1">
-                                <textarea id="message" name="message" rows="3"
+                                <textarea id="message" name="message" rows="3" data-contact-target="message"
                                     class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
                             </div>
                             <p class="mt-2 text-sm text-gray-500">Donec posuere vulputate arcu.</p>
@@ -42,8 +45,10 @@ layout: default
 
                     </div>
                     <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
-                        <button type="submit"
-                            class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Send</button>
+                        <button type="submit" data-contact-target="submit" data-action="contact#submit"
+                            class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+                            Send
+                        </button>
                     </div>
                 </div>
             </form>
