--- a/index.html
+++ b/index.html
@@ -1,57 +1,10 @@
 ---
 layout: default
+controller: authorize
 ---
 
-<div>
-    <div class="md:grid md:grid-cols-3 md:gap-6">
-        <div class="md:col-span-1">
-            <div class="px-4 sm:px-0">
-                <h3 class="text-lg font-medium leading-6 text-gray-900">Contact Us</h3>
-                <p class="mt-1 text-sm text-gray-600">Fusce risus nisl, viverra et, tempor et, pretium in, sapien.</p>
-            </div>
-        </div>
-        <div class="mt-5 md:col-span-2 md:mt-0">
-            <form data-controller="contact"
-                data-contact-url-value="https://aa08zllk9g.execute-api.eu-west-2.amazonaws.com/v1/contact">
-                <div class="shadow sm:overflow-hidden sm:rounded-md">
-                    <div class="space-y-6 bg-white px-4 py-5 sm:p-6">
-                        <div class="grid grid-cols-3 gap-6">
-                            <div class="col-span-3 sm:col-span-2">
-                                <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                                <input type="text" name="name" id="name" autocomplete="name" data-contact-target="name"
-                                    required
-                                    class="block mt-1 shadow-sm w-full flex-1 rounded-md rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-                            </div>
-                        </div>
-
-                        <div class="grid grid-cols-3 gap-6">
-                            <div class="col-span-3 sm:col-span-2">
-                                <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                                <input type="email" name="email" id="email" autocomplete="email"
-                                    data-contact-target="email" required
-                                    class="block mt-1 shadow-sm w-full flex-1 rounded-md rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"
-                                    , placeholder="you@example.com">
-                            </div>
-                        </div>
-
-                        <div>
-                            <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-                            <div class="mt-1">
-                                <textarea id="message" name="message" rows="3" data-contact-target="message"
-                                    class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
-                            </div>
-                            <p class="mt-2 text-sm text-gray-500">Donec posuere vulputate arcu.</p>
-                        </div>
-
-                    </div>
-                    <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
-                        <button type="submit" data-contact-target="submit" data-action="contact#submit"
-                            class="inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
-                            Send
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+<h1 class="text-5xl mb-4">rnuke</h1>
+<button data-action="authorize#start"
+    class="inline-flex justify-center rounded-md border border-transparent bg-green-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">
+    Call Now
+</button>
